--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
 		<title>The Gophers</title>
 		<h1>The Gophers</h1>
-		<h3>Meet the Team</h3>
-		<h5>Emily Biancavilla</h5>
-		<p>Hi, I'm Emily! Here is a paragraph about me.</p>
+		<br>
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</div>
+		<br>
+		<div class="mainContent">
+			<h3>Meet the Team</h3>
+			<h5>Emily Biancavilla</h5>
+			<p>Hi, I'm Emily! Here is a paragraph about me.</p>
 
-		<h5>Jadryan McLain</h5>
-		<p>Paragraph about Jadryan</p>
+			<h5>Jadryan McLain</h5>
+			<p>Paragraph about Jadryan</p>
 
-		<h5>Lexie Wright<h5>
-		<p>Paragraph about Lexie<p>
+			<h5>Lexie Wright</h5>
+			<p>Paragraph about Lexie</p>
+		</div>
 	</body>
 </html>
