Added Contact and About pages

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <html>
 	<body>
 		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
-		<title>The Gophers</title>
-		<h1>The Gophers</h1>
+		<title>The Gophers | Contact</title>
+		<h1>Contact Us</h1>
 		<br>
 		<div class="nav">
 			<ul>
