Add content to mainContent div

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,16 @@
 	<body>
 		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
 		<title>The Gophers | Contact</title>
-		<h1>Contact Us</h1>
-		<br>
-		<div class="nav">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
+		<div class="mainContent">
+			<h1>Contact Us</h1>
+			<br>
+			<div class="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</div>
 		</div>
 		<br>
 	</body>
