--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 	<body>
 		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
 		<title>The Gophers</title>
-		<h1>The Gophers</h1>
-		<br>
-		<div class="nav">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
+		<div class="mainContent">
+			<h1>The Gophers</h1>
+			<br>
+			<div class="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</div>
+			<br>
+			<h3>This is our Home Page</h3>
 		</div>
-		<br>
 	</body>
 </html>
