--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 <html>
 	<body>
-		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
+		<head>
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		</head>
 		<title>The Gophers | About Us</title>
 		<div class="mainContent">
-			<h1>About Us</h1>
 			<br>
 			<div class="nav">
 				<ul>
@@ -12,6 +14,7 @@
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</div>
+			<h1>About Us</h1>
 			<br>
 			<h3>Meet the Team</h3>
 			<h4>Emily Biancavilla</h4>
@@ -27,5 +30,6 @@
 			<h4>Lexie Wright</h4>
 			<p>Paragraph about Lexie</p>
 		</div>
+		
 	</body>
 </html>
