--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <html>
 	<body>
-		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
+		<head>
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		</head>
 		<title>The Gophers | Contact</title>
-		<div class="mainContent">
-			<h1>Contact Us</h1>
-			<br>
+
+		<div class="mainContent">		
 			<div class="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -12,6 +14,7 @@
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</div>
+			<h1>Contact Us</h1>
 		</div>
 		<br>
 	</body>
