--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 	<body>
-		<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
+		<head>
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		</head>
 		<title>The Gophers</title>
 		<div class="mainContent">
 			<h1>The Gophers</h1>
