Restructured head/body and made header consistent

--- a/about.html
+++ b/about.html
@@ -1,35 +1,29 @@
 <html>
-	<body>
-		<head>
-		<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		</head>
-		<title>The Gophers | About Us</title>
-		<div class="mainContent">
-			<br>
-			<div class="nav">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				</ul>
-			</div>
-			<h1>About Us</h1>
-			<br>
-			<h3>Meet the Team</h3>
-			<h4>Emily Biancavilla</h4>
-			<p>Hi, I'm Emily! Here is a paragraph about me.</p>
-			
-			<br>
-			
-			<h4>Jadryan McLain</h4>
-			<p>Paragraph about Jadryan</p>
-
-			<br>
-			
-			<h4>Lexie Wright</h4>
-			<p>Paragraph about Lexie</p>
+<head>
+	<title>The Gophers | About Us</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+	<div class="mainContent">
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
 		</div>
-		
-	</body>
+		<h1 class="page-title">About Us</h1>
+		<br>
+		<h3>Meet the Team</h3>
+		<h4>Emily Biancavilla</h4>
+		<p>Hi, I'm Emily! Here is a paragraph about me.</p>
+		<br>
+		<h4>Jadryan McLain</h4>
+		<p>Paragraph about Jadryan</p>
+		<br>
+		<h4>Lexie Wright</h4>
+		<p>Paragraph about Lexie</p>
+	</div>
+</body>
 </html>
