--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,20 @@
 <html>
-	<body>
-		<head>
-		<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		</head>
-		<title>The Gophers | Contact</title>
-
-		<div class="mainContent">		
-			<div class="nav">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				</ul>
-			</div>
-			<h1>Contact Us</h1>
+<head>
+	<title>The Gophers | Contact</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+	<div class="mainContent">		
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
 		</div>
-		<br>
-	</body>
+		<h1 class="page-title">Contact Us</h1>
+	</div>
+	<br>
+</body>
 </html>
