--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <html>
-	<body>
-		<head>
-		<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		</head>
-		<title>The Gophers</title>
-		<div class="mainContent">
-			<h1>The Gophers</h1>
-			<br>
-			<div class="nav">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				</ul>
-			</div>
-			<br>
-			<h3>This is our Home Page</h3>
+<head>
+	<title>The Gophers</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+	<div class="mainContent">
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
 		</div>
-	</body>
+		<h1 class="page-title">The Gophers</h1>
+		<br>
+		<h3>This is our Home Page</h3>
+	</div>
+</body>
 </html>
