--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div class="mainContent">		
-		<div class="nav">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
-		</div>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact.html" class="active">Contact Us</a></li>
+		</ul>
+	</nav>
+	<div class="content width-control padding">
 		<h1 class="page-title">Contact Us</h1>
 	</div>
-	<br>
 </body>
 </html>
