--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div class="mainContent">
-		<div class="nav">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
+	<nav>
+		<ul>
+			<li><a href="index.html" class="active">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+	</nav>
+	<div class="hero">
+		<div class="caption width-control padding">
+			<h1>We Are The Gophers</h1>
 		</div>
+	</div>
+	<div class="content width-control padding">
 		<h1 class="page-title">The Gophers</h1>
 		<br>
 		<h3>This is our Home Page</h3>
