Seocndary page header

--- a/about.html
+++ b/about.html
@@ -12,8 +12,10 @@
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
+	<div class="secondary-header">
+		<h1 class="page-title width-control padding">About Us</h1>
+	</div>
 	<div class="content width-control padding">
-		<h1 class="page-title">About Us</h1>
 		<br>
 		<h3>Meet the Team</h3>
 		<h4>Emily Biancavilla</h4>
