--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,13 @@
 			<li><a href="contact.html" class="active">Contact Us</a></li>
 		</ul>
 	</nav>
+	<div class="secondary-header">
+		<h1 class="page-title width-control padding">Contact Us</h1>
+	</div>
 	<div class="content width-control padding">
-		<h1 class="page-title">Contact Us</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum id orci a commodo. Integer tempor turpis purus, et maximus quam porta eget. Morbi in euismod diam. Etiam rutrum lacus aliquet est tristique, quis sollicitudin dui malesuada. Vivamus sagittis arcu massa, eu imperdiet orci ultricies in. Mauris a nibh nisl. Vestibulum eleifend ornare erat eget condimentum.</p>
+		<p>Mauris eu nisi dui. Sed sagittis, magna eu congue aliquam, mi risus placerat ligula, et varius mauris massa eget lorem. Phasellus sed tortor eget leo tempus porta sit amet id odio. Mauris sed nisi elit. Quisque aliquet sagittis odio, non laoreet enim posuere id. Praesent aliquam lacus ut efficitur hendrerit. Ut fringilla erat enim, et posuere orci accumsan ac. Suspendisse et dolor suscipit, mattis libero vitae, ornare velit. Ut vitae elit vitae turpis gravida hendrerit ut quis odio.</p>
+		<p>Ut condimentum placerat mattis. Nulla mattis in eros quis ornare. Sed vel magna quis nulla posuere maximus. Integer bibendum fermentum sodales. Integer quis augue purus. In pulvinar at mauris at ultricies. Nullam iaculis venenatis nunc. In scelerisque ante eu elit scelerisque, quis cursus augue laoreet. Aliquam lacinia dui id luctus laoreet. Maecenas sed scelerisque ante. Sed nec erat vel sapien blandit tempus.</p>
 	</div>
 </body>
 </html>
