Footer & Footer Style

--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
 		<br>
 		<h3>This is our Home Page</h3>
 	</div>
+	<footer> 
+		<div class="width-control padding"> <p>Copyright &copy;The Gophers 2018 </p>
+			</div>
+	</footer>
 </body>
 </html>
