Jadryan Bio & Skill Set

--- a/about.html
+++ b/about.html
@@ -20,9 +20,16 @@
 		<h3>Meet the Team</h3>
 		<h4>Emily Biancavilla</h4>
 		<p>Hi, I'm Emily! Here is a paragraph about me.</p>
-		<br>
-		<h4>Jadryan McLain</h4>
-		<p>Paragraph about Jadryan</p>
+		<div class="team-member">
+			<h4>Jadryan McLain</h4>
+			<p>I'm a front end developer that enjoys coding with HTML, CSS, and JavaScript. I'm a GIMM student at BSU as a Sophomore. I also enjoy skateboarding and playing video games in my free time.</p>
+			<h4>Skill Set:</h4>
+			<ul>
+				<li>HTML, CSS, and JS</li>
+				<li>Rocket League</li>
+				<li>Problem Solving</li>
+			</ul>
+		</div>
 		<br>
 		<h4>Lexie Wright</h4>
 		<p>Paragraph about Lexie</p>
