--- a/about.html
+++ b/about.html
@@ -24,8 +24,16 @@
 		<h4>Jadryan McLain</h4>
 		<p>Paragraph about Jadryan</p>
 		<br>
-		<h4>Lexie Wright</h4>
-		<p>Paragraph about Lexie</p>
+		<b>Lexie Wright</b>
+		<p>Hey there! I'm Lexie. I am a Sophmore at Bosie State majoring in GIMM and Psychology. 
+			In my free time I enjoy eating ice cream and taking my dog to the park. 
+		</p>
+		<h4> Skillset</h4>
+		<ul> 
+			<li>Adobe Creative Cloud </li>
+			<li>3D Printing</li>
+			<li>Ceramics</li>
+		</ul>
 	</div>
 </body>
 </html>
