Footer on every page/ pictures for team members

--- a/about.html
+++ b/about.html
@@ -14,13 +14,18 @@
 	</nav>
 	<div class="secondary-header">
 		<h1 class="page-title width-control padding">About Us</h1>
+		
 	</div>
 	<div class="content width-control padding">
 		<br>
-		<h3>Meet the Team</h3>
+		<h3>Meet The Team</h3>
+		<div class="team-member">
+				<img src= "img/Gopheremily.jpg">
 		<h4>Emily Biancavilla</h4>
 		<p>Hi, I'm Emily! Here is a paragraph about me.</p>
+		</div>
 		<div class="team-member">
+				<img src= "img/Realgopherboy.jpg">
 			<h4>Jadryan McLain</h4>
 			<p>I'm a front end developer that enjoys coding with HTML, CSS, and JavaScript. I'm a GIMM student at BSU as a Sophomore. I also enjoy skateboarding and playing video games in my free time.</p>
 			<h4>Skill Set:</h4>
@@ -30,8 +35,9 @@
 				<li>Problem Solving</li>
 			</ul>
 		</div>
-		<br>
-		<b>Lexie Wright</b>
+		<div class="team-member">
+			<img src= "img/Gophergirl.jpg">
+		<h4>Lexie Wright</h4>
 		<p>Hey there! I'm Lexie. I am a Sophmore at Bosie State majoring in GIMM and Psychology. 
 			In my free time I enjoy eating ice cream and taking my dog to the park. 
 		</p>
@@ -41,6 +47,11 @@
 			<li>3D Printing</li>
 			<li>Ceramics</li>
 		</ul>
+		</div>
 	</div>
+	<footer> 
+		<div class="width-control padding"> <p>Copyright &copy;The Gophers 2018 </p>
+			</div>
+	</footer>
 </body>
 </html>
