--- a/contact.html
+++ b/contact.html
@@ -20,5 +20,9 @@
 		<p>Mauris eu nisi dui. Sed sagittis, magna eu congue aliquam, mi risus placerat ligula, et varius mauris massa eget lorem. Phasellus sed tortor eget leo tempus porta sit amet id odio. Mauris sed nisi elit. Quisque aliquet sagittis odio, non laoreet enim posuere id. Praesent aliquam lacus ut efficitur hendrerit. Ut fringilla erat enim, et posuere orci accumsan ac. Suspendisse et dolor suscipit, mattis libero vitae, ornare velit. Ut vitae elit vitae turpis gravida hendrerit ut quis odio.</p>
 		<p>Ut condimentum placerat mattis. Nulla mattis in eros quis ornare. Sed vel magna quis nulla posuere maximus. Integer bibendum fermentum sodales. Integer quis augue purus. In pulvinar at mauris at ultricies. Nullam iaculis venenatis nunc. In scelerisque ante eu elit scelerisque, quis cursus augue laoreet. Aliquam lacinia dui id luctus laoreet. Maecenas sed scelerisque ante. Sed nec erat vel sapien blandit tempus.</p>
 	</div>
+	<footer> 
+		<div class="width-control padding"> <p>Copyright &copy;The Gophers 2018 </p>
+			</div>
+	</footer>
 </body>
 </html>
